// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Stepper Header Variants 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers bg-dark"
    >
      <ul
        className="steppers-header"
      >
        <li
          className="confirmed"
        >
          Label Step 1
          <svg
            className="icon icon steppers-success"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </li>
        <li
          className="active"
        >
          Label Step 2
        </li>
        <li
          className=""
        >
          Label Step 3
        </li>
        <li
          className="steppers-index"
        >
          2/6
        </li>
      </ul>
      <ul
        className="steppers-header"
      >
        <li
          className="confirmed"
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.5 4H17V3h-1v1H8V3H7v1H3.5A1.5 1.5 0 002 5.5v13A1.5 1.5 0 003.5 20h17a1.5 1.5 0 001.5-1.5v-13A1.5 1.5 0 0020.5 4zm.5 14.5a.5.5 0 01-.5.5h-17a.5.5 0 01-.5-.5v-13a.5.5 0 01.5-.5H7v1h1V5h8v1h1V5h3.5a.5.5 0 01.5.5zM4 8h16v1H4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Label Step 1
          <svg
            className="icon icon steppers-success"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </li>
        <li
          className="active"
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.5 8.5H17V8A5 5 0 007 8v.5H5.5A1.5 1.5 0 004 10v8.5A1.5 1.5 0 005.5 20h13a1.5 1.5 0 001.5-1.5V10a1.5 1.5 0 00-1.5-1.5zM8 8a4 4 0 018 0v.5H8zm11 10.5a.5.5 0 01-.5.5h-13a.5.5 0 01-.5-.5V10a.5.5 0 01.5-.5h13a.5.5 0 01.5.5z"
            />
            <path
              d="M12 13.25a1 1 0 11-1 1 1 1 0 011-1m0-1a2 2 0 102 2 2 2 0 00-2-2z"
            />
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
          Label Step 2
        </li>
        <li
          className=""
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 7.5a4.5 4.5 0 104.5 4.5A4.5 4.5 0 0012 7.5zm0 8a3.5 3.5 0 113.5-3.5 3.5 3.5 0 01-3.5 3.5zm9.8-1.6A12.3 12.3 0 0022 12a12.3 12.3 0 00-.2-1.9l-2.1-.3a8.7 8.7 0 00-.7-1.7l1.3-1.7a8.7 8.7 0 00-2.7-2.7L15.9 5l-1.7-.7-.3-2.1L12 2l-1.9.2-.3 2.1-1.7.7-1.7-1.3a8.7 8.7 0 00-2.7 2.7L5 8.1a8.7 8.7 0 00-.7 1.7l-2.1.3A12.3 12.3 0 002 12a12.3 12.3 0 00.2 1.9l2.1.3a8.7 8.7 0 00.7 1.7l-1.3 1.7a8.7 8.7 0 002.7 2.7L8.1 19l1.7.7.3 2.1 1.9.2 1.9-.2.3-2.1 1.7-.7 1.7 1.3a8.7 8.7 0 002.7-2.7L19 15.9a8.7 8.7 0 00.7-1.7zm-2.9-.7l-.2.7a3.9 3.9 0 01-.6 1.5l-.3.6.4.5.8 1.1a9.3 9.3 0 01-1.4 1.4l-1.1-.8-.5-.4-.6.3a3.9 3.9 0 01-1.5.6l-.7.2v.7l-.2 1.3h-2l-.2-1.3v-.7l-.7-.2a3.9 3.9 0 01-1.5-.6l-.6-.3-.5.4-1.1.8A9.3 9.3 0 015 17.6l.8-1.1.4-.5-.3-.6a3.9 3.9 0 01-.6-1.5l-.2-.7h-.7L3.1 13a3.4 3.4 0 01-.1-1 3.4 3.4 0 01.1-1l1.3-.2h.7l.2-.7a3.9 3.9 0 01.6-1.5l.3-.6-.4-.5L5 6.4 6.4 5l1.1.8.5.4.6-.3a3.9 3.9 0 011.5-.6l.7-.2v-.7l.2-1.3h2l.2 1.3v.7l.7.2a3.9 3.9 0 011.5.6l.6.3.5-.4 1.1-.8A9.3 9.3 0 0119 6.4l-.8 1.1-.4.5.3.6a3.9 3.9 0 01.6 1.5l.2.7h.7l1.3.2a3.4 3.4 0 01.1 1 3.4 3.4 0 01-.1 1l-1.3.2z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Label Step 3
        </li>
        <li
          className="steppers-index"
        >
          2/6
        </li>
      </ul>
      <ul
        className="steppers-header"
      >
        <li
          className="confirmed"
        >
          <span
            className="steppers-number"
          >
            <svg
              className="icon"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          Label Step 1
        </li>
        <li
          className="active no-line"
        >
          <span
            className="steppers-number"
          >
            <span>
              2
            </span>
          </span>
          Label Step 2
        </li>
        <li
          className=""
        >
          <span
            className="steppers-number"
          >
            <span>
              3
            </span>
          </span>
          Label Step 3
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper Navigation of the steps 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers"
    >
      <ul
        className="steppers-header"
      >
        <li
          className="confirmed"
        >
          Label Step 1
          <svg
            className="icon icon steppers-success"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </li>
        <li
          className="active"
        >
          Label Step 2
        </li>
        <li
          className=""
        >
          Label Step 3
        </li>
        <li
          className="steppers-index"
        >
          2/6
        </li>
      </ul>
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#fafafa",
            "border": "2px dashed #eee",
            "color": "#333",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <button
          aria-label={null}
          className="steppers-btn-next btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          Next
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
            />
          </svg>
        </button>
        <button
          aria-label={null}
          className="stepper-btn-confirm d-none d-lg-block btn btn-primary btn-sm"
          onClick={[Function]}
        >
          Confirmation
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper Order of the steps 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers"
    >
      <ul
        className="steppers-header"
      >
        <li
          className="confirmed"
        >
          <span
            className="steppers-number"
          >
            <svg
              className="icon"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          Label Step 1
        </li>
        <li
          className="active no-line"
        >
          <span
            className="steppers-number"
          >
            <span>
              2
            </span>
          </span>
          Label Step 2
        </li>
        <li
          className=""
        >
          <span
            className="steppers-number"
          >
            <span>
              3
            </span>
          </span>
          Label Step 3
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper Text Only 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers"
    >
      <ul
        className="steppers-header"
      >
        <li
          className="confirmed"
        >
          Label Step 1
          <svg
            className="icon icon steppers-success"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </li>
        <li
          className="active"
        >
          Label Step 2
        </li>
        <li
          className=""
        >
          Label Step 3
        </li>
        <li
          className="steppers-index"
        >
          2/6
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper Text and Icons 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers"
    >
      <ul
        className="steppers-header"
      >
        <li
          className="confirmed"
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.5 4H17V3h-1v1H8V3H7v1H3.5A1.5 1.5 0 002 5.5v13A1.5 1.5 0 003.5 20h17a1.5 1.5 0 001.5-1.5v-13A1.5 1.5 0 0020.5 4zm.5 14.5a.5.5 0 01-.5.5h-17a.5.5 0 01-.5-.5v-13a.5.5 0 01.5-.5H7v1h1V5h8v1h1V5h3.5a.5.5 0 01.5.5zM4 8h16v1H4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Label Step 1
          <svg
            className="icon icon steppers-success"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </li>
        <li
          className="active"
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.5 8.5H17V8A5 5 0 007 8v.5H5.5A1.5 1.5 0 004 10v8.5A1.5 1.5 0 005.5 20h13a1.5 1.5 0 001.5-1.5V10a1.5 1.5 0 00-1.5-1.5zM8 8a4 4 0 018 0v.5H8zm11 10.5a.5.5 0 01-.5.5h-13a.5.5 0 01-.5-.5V10a.5.5 0 01.5-.5h13a.5.5 0 01.5.5z"
            />
            <path
              d="M12 13.25a1 1 0 11-1 1 1 1 0 011-1m0-1a2 2 0 102 2 2 2 0 00-2-2z"
            />
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </g>
          </svg>
          Label Step 2
        </li>
        <li
          className=""
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 7.5a4.5 4.5 0 104.5 4.5A4.5 4.5 0 0012 7.5zm0 8a3.5 3.5 0 113.5-3.5 3.5 3.5 0 01-3.5 3.5zm9.8-1.6A12.3 12.3 0 0022 12a12.3 12.3 0 00-.2-1.9l-2.1-.3a8.7 8.7 0 00-.7-1.7l1.3-1.7a8.7 8.7 0 00-2.7-2.7L15.9 5l-1.7-.7-.3-2.1L12 2l-1.9.2-.3 2.1-1.7.7-1.7-1.3a8.7 8.7 0 00-2.7 2.7L5 8.1a8.7 8.7 0 00-.7 1.7l-2.1.3A12.3 12.3 0 002 12a12.3 12.3 0 00.2 1.9l2.1.3a8.7 8.7 0 00.7 1.7l-1.3 1.7a8.7 8.7 0 002.7 2.7L8.1 19l1.7.7.3 2.1 1.9.2 1.9-.2.3-2.1 1.7-.7 1.7 1.3a8.7 8.7 0 002.7-2.7L19 15.9a8.7 8.7 0 00.7-1.7zm-2.9-.7l-.2.7a3.9 3.9 0 01-.6 1.5l-.3.6.4.5.8 1.1a9.3 9.3 0 01-1.4 1.4l-1.1-.8-.5-.4-.6.3a3.9 3.9 0 01-1.5.6l-.7.2v.7l-.2 1.3h-2l-.2-1.3v-.7l-.7-.2a3.9 3.9 0 01-1.5-.6l-.6-.3-.5.4-1.1.8A9.3 9.3 0 015 17.6l.8-1.1.4-.5-.3-.6a3.9 3.9 0 01-.6-1.5l-.2-.7h-.7L3.1 13a3.4 3.4 0 01-.1-1 3.4 3.4 0 01.1-1l1.3-.2h.7l.2-.7a3.9 3.9 0 01.6-1.5l.3-.6-.4-.5L5 6.4 6.4 5l1.1.8.5.4.6-.3a3.9 3.9 0 011.5-.6l.7-.2v-.7l.2-1.3h2l.2 1.3v.7l.7.2a3.9 3.9 0 011.5.6l.6.3.5-.4 1.1-.8A9.3 9.3 0 0119 6.4l-.8 1.1-.4.5.3.6a3.9 3.9 0 01.6 1.5l.2.7h.7l1.3.2a3.4 3.4 0 01.1 1 3.4 3.4 0 01-.1 1l-1.3.2z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Label Step 3
        </li>
        <li
          className="steppers-index"
        >
          2/6
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper Version on a dark background 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers bg-dark"
    >
      <ul
        className="steppers-header"
      >
        <li
          className="confirmed"
        >
          Label Step 1
          <svg
            className="icon icon steppers-success"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </li>
        <li
          className="active"
        >
          Label Step 2
        </li>
        <li
          className=""
        >
          Label Step 3
        </li>
        <li
          className="steppers-index"
        >
          2/6
        </li>
      </ul>
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#17324d",
            "border": "2px dashed #eee",
            "borderColor": "#aaa",
            "color": "#EEE",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
            "opacity": 0.5,
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <button
          aria-label={null}
          className="steppers-btn-next btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          Next
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
            />
          </svg>
        </button>
        <button
          aria-label={null}
          className="stepper-btn-confirm d-none d-lg-block btn btn-primary btn-sm"
          onClick={[Function]}
        >
          Confirmation
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper.Navigation variations for mobile - dark version Confirm Button 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers bg-dark mobile-examples"
    >
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#17324d",
            "border": "2px dashed #eee",
            "borderColor": "#aaa",
            "color": "#EEE",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
            "opacity": 0.5,
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <button
          aria-label={null}
          className="steppers-btn-confirm btn btn-primary btn-sm"
          onClick={[Function]}
        >
          Confirm
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper.Navigation variations for mobile - dark version Pallini 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers bg-dark mobile-examples"
    >
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#17324d",
            "border": "2px dashed #eee",
            "borderColor": "#aaa",
            "color": "#EEE",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
            "opacity": 0.5,
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <ul
          className="steppers-dots"
        >
          <li
            className="done"
          />
          <li
            className="done"
          />
          <li
            className="done"
          />
          <li />
          <li />
          <li />
        </ul>
        <button
          aria-label={null}
          className="steppers-btn-next btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          Next
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper.Navigation variations for mobile - dark version Progress Bar 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers bg-dark mobile-examples"
    >
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#17324d",
            "border": "2px dashed #eee",
            "borderColor": "#aaa",
            "color": "#EEE",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
            "opacity": 0.5,
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <div
          className="steppers-progress"
        >
          <div
            className="progress"
          >
            <div
              className="progress-bar-label"
            >
              <span
                className="sr-only"
              />
            </div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="33"
              className="progress-bar"
              role="progressbar"
              style={
                Object {
                  "width": "33%",
                }
              }
            />
          </div>
        </div>
        <button
          aria-label={null}
          className="steppers-btn-next btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          Next
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper.Navigation variations for mobile - dark version Save button 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers bg-dark mobile-examples"
    >
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#17324d",
            "border": "2px dashed #eee",
            "borderColor": "#aaa",
            "color": "#EEE",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
            "opacity": 0.5,
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <button
          aria-label={null}
          className="steppers-btn-save btn btn-primary btn-sm"
          onClick={[Function]}
        >
          Save
        </button>
        <button
          aria-label={null}
          className="stepper-btn-next btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          Next
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper.Navigation variations for mobile Confirm Button 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers mobile-examples"
    >
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#fafafa",
            "border": "2px dashed #eee",
            "color": "#333",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <button
          aria-label={null}
          className="steppers-btn-confirm btn btn-primary btn-sm"
          onClick={[Function]}
        >
          Confirm
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper.Navigation variations for mobile Pallini 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers mobile-examples"
    >
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#fafafa",
            "border": "2px dashed #eee",
            "color": "#333",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <ul
          className="steppers-dots"
        >
          <li
            className="done"
          />
          <li
            className="done"
          />
          <li
            className="done"
          />
          <li />
          <li />
          <li />
        </ul>
        <button
          aria-label={null}
          className="steppers-btn-next btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          Next
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper.Navigation variations for mobile Progress bar 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers mobile-examples"
    >
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#fafafa",
            "border": "2px dashed #eee",
            "color": "#333",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <div
          className="steppers-progress"
        >
          <div
            className="progress"
          >
            <div
              className="progress-bar-label"
            >
              <span
                className="sr-only"
              />
            </div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="33"
              className="progress-bar"
              role="progressbar"
              style={
                Object {
                  "width": "33%",
                }
              }
            />
          </div>
        </div>
        <button
          aria-label={null}
          className="steppers-btn-next btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          Next
          <svg
            className="icon icon-primary"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Stepper.Navigation variations for mobile Save Button 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="steppers mobile-examples"
    >
      <div
        aria-live="polite"
        className="steppers-content"
        style={
          Object {
            "alignItems": "center",
            "background": "#fafafa",
            "border": "2px dashed #eee",
            "color": "#333",
            "display": "flex",
            "height": "400px",
            "justifyContent": "center",
          }
        }
      >
        <p>
          Example content of the current step
        </p>
      </div>
      <nav
        className="steppers-nav"
      >
        <button
          aria-label={null}
          className="steppers-btn-prev btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
            />
          </svg>
          Back
        </button>
        <button
          aria-label={null}
          className="steppers-btn-save btn btn-primary btn-sm"
          onClick={[Function]}
        >
          Save
        </button>
        <button
          aria-label={null}
          className="stepper-btn-next btn btn-outline-primary btn-sm"
          onClick={[Function]}
        >
          Next
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
